src/objects/Feed__c.object
<CustomObject>
    <fields>
        <fullName>fs_description__c</fullName>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>fs_url__c</fullName>
        <label>URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>rs_recipientAccount__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Recipient Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Job Feeds</relationshipLabel>
        <relationshipName>Job_Feed_Account</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rs_recipientLead__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Recipient Lead</label>
        <referenceTo>Lead</referenceTo>
        <relationshipLabel>Job Feeds</relationshipLabel>
        <relationshipName>Job_Feed_Lead</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Job Feed</label>
    <nameField>
        <label>Job Feed Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Job Feeds</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>